dark mode textarea fix

--- a/src/app/(web)/globals.css
+++ b/src/app/(web)/globals.css
@@ -25,3 +25,12 @@
 .font-normal {
     @apply text-sm md:text-base;
 }
+textarea .dark{
+    color:black;
+}
+textarea .light{
+    color:black
+}
+textarea {
+    color:black
+}
